src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_division.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        Integer(
            10,
        ),
        Slash,
        Integer(
            5,
        ),
        Semicolon,
    ],
)
