src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_logical_negation.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        LogicalNegation,
        Integer(
            3,
        ),
        Semicolon,
    ],
)
