src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_many_unary_ops.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        BitwiseComplement,
        LogicalNegation,
        BitwiseComplement,
        BitwiseComplement,
        Minus,
        LogicalNegation,
        Integer(
            3,
        ),
        Semicolon,
    ],
)
