src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_multiplication.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        Integer(
            3,
        ),
        Asterisk,
        Integer(
            3,
        ),
        Semicolon,
    ],
)
