src/lexer/snapshots/dinky_c__lexer__lexer__tests__lex_return_subtraction.snap
---
source: src/lexer/lexer.rs
expression: lex(&input)
---
Ok(
    [
        RETURN,
        Integer(
            3,
        ),
        Minus,
        Integer(
            1,
        ),
        Semicolon,
    ],
)
